[project]
name = "comfyui-nano-banana"
version = "1.0.0"
description = "A ComfyUI node for advanced image editing using the Google Gemini API."
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [ "google-genai>=1.32.0" ]

[tool.black]
line-length = 120
preview = true

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "G",
  "I",
  "PIE",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W",
]
lint.extend-ignore = [
  "I001",
  "RUF100",
  "S311",
  "S603",
]
lint.mccabe.max-complexity = 20

[tool.isort]
profile = "black"

[tool.comfy]
PublisherId = "visionatrix"
DisplayName = "Nano Banana"